Config und Processor lauffähig

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
+debug=true
+# Tomcat Spring Port
+server.port=8082
 # Websocket-Server Port
-server.port=8081
+ws.server.port=8081
 # Laufzeit der Processor-Iteration in Millisekunden
 processor.iteration.duration=1000
